tests/testcase-templates/regular-script-based/JiraXXXX.cfc
<cfscript>
component extends="org.railo.cfml.test.RailoTestCase"	{

	public function setUp(){
	}

	/*public void function test(){
		assertEquals("","");
		
		try{
			// error
			fail("");
		}
		catch(local.exp){}
	}*/
} 
</cfscript>